force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/breg_WEB_WEB_PERSONS__c.object-meta.xml
<CustomObject>
    <label>WEB PERSONS</label>
    <nameField>
        <label>WEB PERSONS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB PERSONSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>