force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_ADDRESS_LINE_2__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_ADDRESS_LINE_2__c</fullName>
    <label>ADDRESS LINE 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>