force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_AGENT_FILE_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_AGENT_FILE_SUFFIX__c</fullName>
    <label>AGENT FILE SUFFIX</label>
    <length>2</length>
    <type>Text</type>
</CustomField>