force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WEB PERSONSs</relationshipLabel>
    <relationshipName>WEB_PERSONSs</relationshipName>
    <type>Lookup</type>
</CustomField>