force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_FILE_NO__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_FILE_NO__c</fullName>
    <label>FILE NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>