force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_First_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>