force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_Is_Company_Confidence_Pct__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_Is_Company_Confidence_Pct__c</fullName>
    <label>Is Company Confidence %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>