force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_PERSON_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PERSON_NAME__c</fullName>
    <label>PERSON NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>