force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_PERSON_OFFICE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PERSON_OFFICE__c</fullName>
    <label>PERSON OFFICE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>