force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_PERSON_SEQ__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PERSON_SEQ__c</fullName>
    <label>PERSON SEQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>