force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_PERSON_STATUS__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PERSON_STATUS__c</fullName>
    <label>PERSON STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>