force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_PERSON_TYPE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PERSON_TYPE__c</fullName>
    <label>PERSON TYPE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>