force-app/main/default/objects/breg_WEB_WEB_PERSONS__c/fields/breg_WEB_WEB_ACTION_CODE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_WEB_ACTION_CODE__c</fullName>
    <label>WEB ACTION CODE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>